# topteam

./: .gitignore  README.md  pyproject.toml
src/topteam/: friends_repository.py  happiness_function.py  main.py  models.py  players_repository.py  rules_repository.py
src/topteam/team_composition/: composer.py  pair_sorting_strategy.py  teams_composition_strategy.py
src/topteam/team_composition/strategies/: __init__.py  base.py  pick_top_one_by_one.py  top_pairs.py
