[tool.poetry]
name = "topteam"
version = "0.1.0"
description = ""
authors = ["Viacheslav Krachkov <vskrachkov@hotmail.com>"]
readme = "README.md"
packages = [{include = "topteam", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
